--- a/public/assets/scss/pages/logged-in/_my-contracts.scss
+++ b/public/assets/scss/pages/logged-in/_my-contracts.scss
@@ -1,4 +1,14 @@
 .my-contracts {
+    .mobile-slide {
+        display: none;
+        padding-top: 10px;
+        img {
+            max-width: none;
+        }
+        @include breakpoint($sm-down) {
+            display: block;
+        }
+    }
     ::-webkit-scrollbar {
         -webkit-appearance: none;
     }
