--- a/public/assets/scss/pages/logged-in/dentist/_homepage-no-contracts.scss
+++ b/public/assets/scss/pages/logged-in/dentist/_homepage-no-contracts.scss
@@ -31,5 +31,8 @@
                 }
             }
         }
+        @include breakpoint($xs) {
+            padding: 30px 15px;
+        }
     }
 }
