--- a/public/assets/scss/additionals/_fonts.scss
+++ b/public/assets/scss/additionals/_fonts.scss
@@ -7,6 +7,7 @@
          url("/assets/fonts/OpenSans-SemiBold.ttf") format("truetype");
     font-weight: normal;
     font-style: normal;
+    font-display: block;
 }
 
 @font-face {
@@ -18,6 +19,7 @@
          url("/assets/fonts/OpenSans-Bold.ttf") format("truetype");
     font-weight: normal;
     font-style: normal;
+    font-display: block;
 }
 
 @font-face {
@@ -29,6 +31,7 @@
          url("/assets/fonts/Roboto-Regular.ttf") format("truetype");
     font-weight: normal;
     font-style: normal;
+    font-display: block;
 }
 
 @font-face {
@@ -40,6 +43,7 @@
          url("/assets/fonts/Calibri Bold.ttf") format("truetype");
     font-weight: normal;
     font-style: normal;
+    font-display: block;
 }
 
 @font-face {
@@ -51,6 +55,7 @@
     url("/assets/fonts/calibril.ttf") format("truetype");
     font-weight: normal;
     font-style: normal;
+    font-display: block;
 }
 
 @font-face {
@@ -62,6 +67,7 @@
     url("/assets/fonts/Lato-Bold.ttf") format("truetype");
     font-weight: normal;
     font-style: normal;
+    font-display: block;
 }
 
 @font-face {
@@ -73,6 +79,7 @@
     url("/assets/fonts/Lato-Regular.ttf") format("truetype");
     font-weight: normal;
     font-style: normal;
+    font-display: block;
 }
 
 @font-face {
@@ -84,6 +91,7 @@
     url("/assets/fonts/Lato-Black.ttf") format("truetype");
     font-weight: normal;
     font-style: normal;
+    font-display: block;
 }
 
 @font-face {
@@ -95,6 +103,7 @@
     url("/assets/fonts/Lato-Semibold.ttf") format("truetype");
     font-weight: normal;
     font-style: normal;
+    font-display: block;
 }
 
 @font-face {
@@ -106,6 +115,7 @@
     url("/assets/fonts/Lato-Light.ttf") format("truetype");
     font-weight: normal;
     font-style: normal;
+    font-display: block;
 }
 
 @font-face {
@@ -117,6 +127,7 @@
     url("/assets/fonts/Calibri.ttf") format("truetype");
     font-weight: normal;
     font-style: normal;
+    font-display: block;
 }
 
 .lato-semibold {
