test transaction history

--- a/public/assets/scss/pages/logged-in/_my-profile.scss
+++ b/public/assets/scss/pages/logged-in/_my-profile.scss
@@ -56,5 +56,8 @@
                 max-width: 450px;
             }
         }
+        .transaction-history-table {
+            width: 100%;
+        }
     }
 }
