--- a/public/assets/scss/pages/logged-in/_my-profile.scss
+++ b/public/assets/scss/pages/logged-in/_my-profile.scss
@@ -60,4 +60,13 @@
             width: 100%;
         }
     }
+    .withdraw-table {
+        display: table;
+        width: 100%;
+        td, th {
+            border: 1px solid #dddddd;
+            text-align: left;
+            padding: 8px;
+        } 
+    }
 }
