--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -9244,13 +9244,42 @@ body.logged-in .my-profile-page-content {
   max-width: 450px; }
 .my-profile .my-profile-page-content .transaction-history-table {
   width: 100%; }
-.my-profile .withdraw-table {
+.my-profile .table-wrapper .withdraw-table {
   display: table;
   width: 100%; }
-  .my-profile .withdraw-table td, .my-profile .withdraw-table th {
+  .my-profile .table-wrapper .withdraw-table td, .my-profile .table-wrapper .withdraw-table th {
     border: 1px solid #dddddd;
     text-align: left;
     padding: 8px; }
+@media screen and (max-width: 767px) {
+  .my-profile .table-wrapper {
+    overflow-y: auto; }
+    .my-profile .table-wrapper .withdraw-table {
+      width: 800px; } }
+.my-profile .mobile-slide {
+  display: none;
+  padding-top: 10px; }
+  .my-profile .mobile-slide img {
+    max-width: none; }
+  @media screen and (max-width: 991px) {
+    .my-profile .mobile-slide {
+      display: block; } }
+.my-profile ::-webkit-scrollbar {
+  -webkit-appearance: none; }
+.my-profile ::-webkit-scrollbar:vertical {
+  width: 12px; }
+.my-profile ::-webkit-scrollbar:horizontal {
+  height: 12px; }
+.my-profile ::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, 0.5);
+  border-radius: 10px;
+  border: 2px solid white; }
+.my-profile ::-webkit-scrollbar-track {
+  background-color: white;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  border-radius: 10px; }
 
 section.edit-account form#patient-update-profile .form-row > label {
   width: 180px;
