--- a/public/assets/scss/pages/logged-in/_my-profile.scss
+++ b/public/assets/scss/pages/logged-in/_my-profile.scss
@@ -60,13 +60,49 @@
             width: 100%;
         }
     }
-    .withdraw-table {
-        display: table;
-        width: 100%;
-        td, th {
-            border: 1px solid #dddddd;
-            text-align: left;
-            padding: 8px;
-        } 
+    .table-wrapper {
+        .withdraw-table {
+            display: table;
+            width: 100%;
+            td, th {
+                border: 1px solid #dddddd;
+                text-align: left;
+                padding: 8px;
+            }
+        }
+        @include breakpoint($xs) {
+            overflow-y: auto;
+            .withdraw-table {
+                width: 800px;
+            }
+        }
+    }
+    .mobile-slide {
+        display: none;
+        padding-top: 10px;
+        img {
+            max-width: none;
+        }
+        @include breakpoint($sm-down) {
+            display: block;
+        }
+    }
+    ::-webkit-scrollbar {
+        -webkit-appearance: none;
+    }
+    ::-webkit-scrollbar:vertical {
+        width: 12px;
+    }
+    ::-webkit-scrollbar:horizontal {
+        height: 12px;
+    }
+    ::-webkit-scrollbar-thumb {
+        background-color: rgba(0, 0, 0, .5);
+        border-radius: 10px;
+        border: 2px solid white;
+    }
+    ::-webkit-scrollbar-track {
+        background-color: white;
+        @include rounded(10px);
     }
 }
